--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  
 </ul>
+<button routerLink="/lazy">lazy</button>
+<button routerLink="/about">about</button>
+<button routerLink="/about/loadchild">child about</button>
 
 <router-outlet></router-outlet>
